# math-companion-app

./: README.md
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  vault.py
backend/prompts/: system_prompt.md
docs/superpowers/plans/: 2026-07-08-desmos-calculators.md  2026-07-08-math-equation-rendering.md
docs/superpowers/specs/: 2026-07-08-desmos-calculators-design.md  2026-07-08-math-equation-rendering-design.md
extension/: background.js  calculator.js  content-script.js  desmos-loader.js  graphing.html  graphing.js  inline-math-input.js  manifest.json  math-render.js  sidepanel.css  sidepanel.html  sidepanel.js
